--- a/MyWpfFramework.Infrastructure/packages.config
+++ b/MyWpfFramework.Infrastructure/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net40" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
-  <package id="MvvmLight" version="5.1.1.0" targetFramework="net40" />
-  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net40" />
-  <package id="structuremap" version="3.1.5.154" targetFramework="net40" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="MvvmLight" version="5.3.0.0" targetFramework="net46" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
+  <package id="StructureMap" version="4.4.5" targetFramework="net46" />
 </packages>
