--- a/MyWpfFramework.Models/packages.config
+++ b/MyWpfFramework.Models/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Fody" version="1.28.3" targetFramework="net40" />
-  <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="2.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="PropertyChanged.Fody" version="2.0.1" targetFramework="net46" developmentDependency="true" />
 </packages>
