--- a/MyWpfFramework/packages.config
+++ b/MyWpfFramework/packages.config
@@ -1,14 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net40" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net40" />
-  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net40" />
-  <package id="Fody" version="1.28.3" targetFramework="net40" developmentDependency="true" />
-  <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net40" />
-  <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net40" />
-  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
-  <package id="MvvmLight" version="5.1.1.0" targetFramework="net40" />
-  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net40" />
-  <package id="PropertyChanged.Fody" version="1.49.1" targetFramework="net40" developmentDependency="true" />
-  <package id="structuremap" version="3.1.5.154" targetFramework="net40" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
+  <package id="EntityFramework.SqlServerCompact" version="6.1.3" targetFramework="net46" />
+  <package id="MahApps.Metro" version="1.5.0" targetFramework="net46" />
+  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net46" />
+  <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net46" />
+  <package id="MvvmLight" version="5.3.0.0" targetFramework="net46" />
+  <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
+  <package id="StructureMap" version="4.4.5" targetFramework="net46" />
 </packages>
