How to use a SingletonConvention

--- a/MyWpfFramework.Infrastructure/MyWpfFramework.Infrastructure.csproj
+++ b/MyWpfFramework.Infrastructure/MyWpfFramework.Infrastructure.csproj
@@ -86,9 +86,11 @@
   <ItemGroup>
     <Compile Include="Core\FrameFactory.cs" />
     <Compile Include="Core\Redirect.cs" />
+    <Compile Include="Core\SingletonConvention.cs" />
     <Compile Include="Core\SmObjectFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Admin\AddNewUserViewModel.cs" />
+    <Compile Include="ViewModels\Common\AboutViewModel.cs" />
     <Compile Include="ViewModels\Login\LoginPageViewModel.cs" />
     <Compile Include="ViewModels\MainMenuViewModel.cs" />
     <Compile Include="ViewModels\UserInfo\ChangeProfileViewModel.cs" />
